[package]
name = "plaintext-sports"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
mockito = "1.1"
assert_cmd = "2.0"
predicates = "3.0"
tokio = { version = "1.28", features = ["full", "test-util"] }
proptest = "1.3"
